--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
 
     }
     .detailDeliveryRect {
-      fill:rgba(26, 48, 71,0.25);
+      fill:rgba(26, 48, 71,0.75);
     }
 
     .detailInfoRect {
@@ -100,6 +100,9 @@ body {
     .detailInfoPOC{
       position:relative;
       fill:grey;
+    }
+    .detailInfoCompanyName {
+      fill:white;
     }
 
     .maskingGradient {
