estimated time w/ a minute between

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,11 @@ body {
     .detailInfoCompanyName {
       fill:white;
     }
+    .detailScheduledLine2 {
+      stroke: red;
+      stroke-width:    1px;
+      
+    }
 
     .maskingGradient {
       fill: url(#maskingGradient);
