--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,12 @@ body {
       stroke-width:    1px;
 
     }
+    .detailScheduledLine2.pink{
+      stroke:red;
+    }
+    .detailScheduledLine2.green{
+      stroke:green;
+    }
 
     .detailEventLine {
       stroke: white;
