--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body {
       stop-color:#0581A6;
     }
     .color-onTime-right {
-      stop-color:#C90C14;
+      stop-color:#0581A6;
     }
 
 /*    .delivery g image:hover line{
