--- a/styles.css
+++ b/styles.css
@@ -252,8 +252,8 @@ body {
       stroke-width:    1px;
     }
     .workflow.betweenPorts {
-      stroke: green;
-      stroke-width:    12px;
+      stroke: #535353;
+      stroke-width:    2px;
     }
     .workflow.ahead {
       stroke:#00B4C2;
